# oss_data_library

./: .readthedocs.yaml  DataPreProcessor.py  LICENCE  OSS_PNG_Transfer.py  PNGProcessor.py  README.md  README.rst  Rule.md  open.py  pyproject.toml  setup  setup.py
dev/: MLP.py  integration.py
dev/DataSplit/: data_split.py
dev/OneHotEncode/: OneHot.py
dev/Scaling/: scaling_.py
dev/openPNG/: def_open.py  flatten_img.py  open.py
oss_png_transfer/: __init__.py
sphinx/source/: DataPreProcessor.rst  MLPForMINIST.rst  PNGProcessor.rst  conf.py  index.rst
test/: PNGProcessor.py  test_DataPreProcessor.py  test_PNGProcessor.py
